--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,22 @@
 [project]
 name = "mov"
-version = "0.1.0"
-description = "Default template for PDM package"
+version = "0.2.0"
+description = "영화진흥위원회 영화순위 데이터 처리"
 authors = [
     {name = "sunwoo", email = "summerham22@gmail.com"},
 ]
 dependencies = []
-requires-python = "==3.11.*"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
 
 [tool.pdm]
-distribution = false
+distribution = true
+
+[project.scripts]
+mov-ping = 'mov.cli:ping'
+
+[project.urls]
+Homepage = "https://github.com/hamsunwoo/movie"
+Issues = "https://github.com/hamsunwoo/movie/issues"
